# FirmataC

./: .gitignore  CMakeLists.txt
examples/: Makefile  ledBlink.c
includes/: firmata.h
src/: firmata.c  serial.c
